Add some other NBs

--- a/config.json
+++ b/config.json
@@ -4,11 +4,11 @@
     "annual_reports_html_save_directory":"/app/data/10k_html",
     "annual_reports_pdf_save_directory":"/app/data/10k_pdf",
     "10k_df_pkl_pathfn": "/app/data/all_10k_df.pkl",
-    "targets_df_path":"<pandas df containing generated target columns saved as pickle file>",
-    "targets_train_df_path":"<pandas df of sampled train data saved as pickle file>",
-    "targets_test_df_path":"<pandas df of sampled test data saved as pickle file>",
-    "embeddings_for_training_directory":"<save embeddings for train dataset here>",
-    "embeddings_for_testing_directory":"<save embeddings for test dataset here>",
+    "targets_df_path":"/app/data/targets_df.pkl",
+    "targets_train_df_path":"/app/data/targets_train_df.pkl",
+    "targets_test_df_path":"/app/data/targets_test_df.pkl",
+    "embeddings_for_training_directory":"/app/data/embeddings_for_training/",
+    "embeddings_for_testing_directory":"/app/data/embeddings_for_testing/",
     "feature_train_df_save_directory":"<directory where gpt generated feature scores for train set for each symbol and date will be saved>",
     "feature_test_df_save_directory":"<directory where gpt generated feature scores for test set for each symbol and date will be saved>",
     "final_train_df_save_path":"<pandas df containing target and feature columns for train set saved as pickle file>",
